# scache

./: .flake8  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  .shellcheckrc  CONTRIBUTING.md  README.md  main.py  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: binary.yml  build_executables.yml  license.yml  lint.yml  publish.yml  pypi_publish.yml  release.yml  test_local_scripts.yml  test_online_scripts.yml
.github/workflows/actions/install-shells/: action.yml
scache/: __main__.py  cli.py  env.py
spcache/: cli.py  env.py
sscache/: __main__.py  cli.py  detect.py
tests/: conftest.py  detect_tests.py
