[tool.poetry]
name = "spotify-cache"
version = "0.1.0"
description = "Ensure Spotify's cache size doesn't exceed a specified threshold."
authors = ["Qwerty-133 <74311372+Qwerty-133@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
