[tool.poetry]
name = "sscache"
version = "0.1.0"
description = "Ensure Spotify's cache size doesn't exceed a specified threshold."
authors = ["Qwerty-133 <74311372+Qwerty-133@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Qwerty-133/sscache"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Terminals",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
    "Typing :: Typed",
]
[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
sscache = "sscache.cli:sscache"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
