[tool.poetry]
name = "sscache"
version = "0.1.0"
description = "Ensure Spotify's cache size doesn't exceed a specified threshold."
authors = ["Qwerty-133 <74311372+Qwerty-133@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Qwerty-133/sscache"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Terminals",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
    "Typing :: Typed",
]
[tool.poetry.dependencies]
python = "^3.8.1"
click = "^8.1.3"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
sscache = "sscache.cli:sscache"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.11.0"
black = "^23.3.0"
flake8 = "^6.0.0"
flake8-annotations = "^3.0.1"
flake8-isort = "^6.0.0"
pre-commit = "^3.3.2"
flake8-todo = "^0.7"
flake8-tidy-imports = "^4.8.0"
flake8-string-format = "^0.3.0"
flake8-docstrings = "^1.7.0"
flake8-bugbear = "^23.6.5"
pep8-naming = "^0.13.3"

[tool.taskipy.tasks]
lint = "pre-commit run --all-files"
precommit = "pre-commit install"

[tool.isort]
order_by_type = false
case_sensitive = true
combine_as_imports = true
atomic = true

multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
ensure_newline_before_comments = true

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
